doc: Include the contents of ABOUT-NLS in the documentation.
* gettext-runtime/doc/nls.texi (The original ABOUT-NLS): Renamed from
'Translation Intro'. Turn into a section. Mark section as historical.
* gettext-tools/doc/gettext.texi: Include nls.texi.
* gettext-tools/doc/Makefile.am (gettext_TEXINFOS): Add nls.texi and
matrix.texi.

--- a/gettext-runtime/doc/nls.texi
+++ b/gettext-runtime/doc/nls.texi
@@ -1,5 +1,12 @@
-@node Translation Intro
-@chapter Notes on the Free Translation Project
+@node The original ABOUT-NLS
+@section Notes on the Free Translation Project
+
+@cindex @file{ABOUT-NLS} file
+This section contains the text that was, for a long time, distributed
+as a file named @code{ABOUT-NLS}.
+
+@strong{ NOTE: } This documentation section is outdated.  It it included
+here for historical purposes only.
 
 @set STATUS Jun 2014
 
@@ -29,7 +36,7 @@ on translations can contact the appropriate team.
 
 
 @node INSTALL Matters
-@section INSTALL Matters
+@subsection INSTALL Matters
 
 Some packages are @dfn{localizable} when properly installed; the
 programs they contain can be made to speak your own native language.
@@ -67,7 +74,7 @@ then contain a space separated list of two-letter codes, stating
 which languages are allowed.
 
 @node Using This Package
-@section Using This Package
+@subsection Using This Package
 
 @c Note: We don't document the locale aliases, because they are less and less
 @c used - locale.alias contains not a single UTF-8 locale and still lists
@@ -135,7 +142,7 @@ in this context.
 @c FIXME: The user doesn't care about design justifications. --bruno
 
 @node Translating Teams
-@section Translating Teams
+@subsection Translating Teams
 
 For the Free Translation Project to be a success, we need interested
 people who like their own language and write it well, and who are also
@@ -167,7 +174,7 @@ the terminology in use.  Proven linguistic skills are praised
 more than programming skills, here.
 
 @node Available Packages
-@section Available Packages
+@subsection Available Packages
 
 Languages are not equally supported in all packages.  The following
 matrix shows the current state of internationalization, as of
@@ -193,7 +200,7 @@ up-to-date matrix with full percentage details can be found at
 
 
 @node Using gettext in own code
-@section Using @code{gettext} in new packages
+@subsection Using @code{gettext} in new packages
 
 If you are writing a freely available program and want to internationalize
 it you are welcome to use GNU @file{gettext} in your package.  Of course
