--- a/gettext-runtime/libasprintf/autosprintf.texi
+++ b/gettext-runtime/libasprintf/autosprintf.texi
@@ -63,6 +63,7 @@ A copy of the license is at @url{https://www.gnu.org/licenses/gpl.html}.
 @subtitle Formatted Output to Strings in C++
 @author Bruno Haible
 
+@ifnothtml
 @page
 @vskip 0pt plus 1filll
 @c @insertcopying
@@ -85,9 +86,13 @@ modify it under the terms of the GNU General Public License (GPL), either
 version 2 of the License, or (at your option) any later version published
 by the Free Software Foundation (FSF).
 A copy of the license is at @url{https://www.gnu.org/licenses/gpl.html}.
+@end ifnothtml
 @end titlepage
 
-@ifset makeinfo
+@c Table of Contents
+@contents
+
+@ifnottex
 @node Top
 @top GNU autosprintf
 
@@ -97,9 +102,10 @@ This manual documents the GNU autosprintf class, version @value{VERSION}.
 * Introduction::                Introduction
 * Class autosprintf::           The @code{autosprintf} class
 * Using autosprintf::           Using @code{autosprintf} in own programs
+* Licenses::
 @end menu
 
-@end ifset
+@end ifnottex
 
 @node Introduction
 @chapter Introduction
@@ -184,6 +190,66 @@ that's where the class is defined. In projects using GNU @code{autoconf},
 this means adding @samp{AC_LIB_LINKFLAGS([asprintf])} to @code{configure.in}
 or @code{configure.ac}, and using the @@LIBASPRINTF@@ Makefile variable that
 it provides.
+
+@node Licenses
+@appendix Licenses
+@cindex Licenses
+
+The files of this package are covered by the licenses indicated in each
+particular file or directory.  Here is a summary:
+
+@itemize @bullet
+@item
+The @code{libasprintf} library is covered by the
+GNU Lesser General Public License (LGPL), either version 2.1 of the
+License, or (at your option) any later version published by the
+Free Software Foundation (FSF).
+A copy of the license is included in @ref{GNU LGPL}.
+
+@item
+This manual is free documentation.  It is dually licensed under the
+GNU FDL and the GNU GPL.  This means that you can redistribute this
+manual under either of these two licenses, at your choice.
+@*
+This manual is covered by the GNU FDL.  Permission is granted to copy,
+distribute and/or modify this document under the terms of the
+GNU Free Documentation License (FDL), either version 1.2 of the
+License, or (at your option) any later version published by the
+Free Software Foundation (FSF); with no Invariant Sections, with no
+Front-Cover Text, and with no Back-Cover Texts.
+A copy of the license is included in @ref{GNU FDL}.
+@*
+This manual is covered by the GNU GPL.  You can redistribute it and/or
+modify it under the terms of the GNU General Public License (GPL), either
+version 2 of the License, or (at your option) any later version published
+by the Free Software Foundation (FSF).
+A copy of the license is included in @ref{GNU GPL}.
+@end itemize
+
+@menu
+* GNU LGPL::                    GNU Lesser General Public License
+* GNU GPL::                     GNU General Public License
+* GNU FDL::                     GNU Free Documentation License
+@end menu
+
+@page
+@node GNU LGPL
+@appendixsec GNU LESSER GENERAL PUBLIC LICENSE
+@cindex :GPL, GNU Lesser General Public License
+@cindex License, GNU LGPL
+@include lgpl.texi
+@page
+@node GNU GPL
+@appendixsec GNU GENERAL PUBLIC LICENSE
+@cindex GPL, GNU General Public License
+@cindex License, GNU GPL
+@include gpl.texi
+@page
+@node GNU FDL
+@appendixsec GNU Free Documentation License
+@cindex FDL, GNU Free Documentation License
+@cindex License, GNU FDL
+@include fdl.texi
 
 @bye
 
