doc: Use a version of texi2html which is under a good license.
Reported by <ineiev@gnu.org> in <https://savannah.gnu.org/bugs/?54809>.

* gettext-tools/doc/texi2html: Copied from texi2html-1.78, with changes made in
libunistring/build-aux/texi2html and then in libtextstyle/build-aux/texi2html.
* gettext-tools/doc/gettext.texi: Enable the Top node during texi2html
processing.
* gettext-tools/doc/Makefile.am (gettext.html): Use texi2html options
-no-sec-nav -no-menu -toc-links.
(gettext_toc.html): Likewise. Pull out generated files out of subdirectory.

--- a/gettext-tools/doc/gettext.texi
+++ b/gettext-tools/doc/gettext.texi
@@ -139,7 +139,7 @@ A copy of the license is included in @ref{GNU GPL}.
 @c Table of Contents
 @contents
 
-@ifset makeinfo
+@ifnottex
 @node Top
 @top GNU @code{gettext} utilities
 
@@ -520,7 +520,7 @@ Licenses
 @end detailmenu
 @end menu
 
-@end ifset
+@end ifnottex
 
 @node Introduction
 @chapter Introduction
