--- a/gettext-runtime/doc/nls.texi
+++ b/gettext-runtime/doc/nls.texi
@@ -1,3 +1,7 @@
+@c This file is part of the GNU gettext manual.
+@c Copyright (C) 1995-2019 Free Software Foundation, Inc.
+@c See the file gettext.texi for copying conditions.
+
 @node The original ABOUT-NLS
 @section Notes on the Free Translation Project
 
