--- a/gettext-tools/doc/gettextize.texi
+++ b/gettext-tools/doc/gettextize.texi
@@ -1,3 +1,7 @@
+@c This file is part of the GNU gettext manual.
+@c Copyright (C) 1995-2019 Free Software Foundation, Inc.
+@c See the file gettext.texi for copying conditions.
+
 The @code{gettextize} program is an interactive tool that helps the
 maintainer of a package internationalized through GNU @code{gettext}.
 It is used for two purposes:
