po: Make it possible to override xgettext options from Makefile.in.in.
* gettext-runtime/po/Makefile.in.in ($(DOMAIN).pot-update): List the
XGETTEXT_OPTIONS and the XGETTEXT_EXTRA_OPTIONS after all other options.
* gettext-tools/examples/po/Makefile.am ($(DOMAIN).pot-update): Likewise.
* gettext-tools/examples/hello-*/po/Makefile.am ($(DOMAIN).pot-update):
Likewise.
* gettext-tools/examples/hello-objc-gnustep/po/GNUmakefile
($(DOMAIN).pot-update): Likewise.
* NEWS: Mention the change.
* gettext-tools/doc/gettext.texi (po/Makevars): Fix typo.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+Version 0.20 - May 2019
+
 * Support for reproducible builds:
   - msgfmt now eliminates the POT-Creation-Date header field from .mo files.
 
@@ -9,6 +11,8 @@
     for use by msgfmt only.  This option saves processing time, in particular
     by omitting fuzzy matching that is not useful in this situation.
   - The .pot file in a 'po' directory is now erased by "make maintainer-clean".
+  - It is now possible to override xgettext options from the po/Makefile.in.in
+    through options in XGETTEXT_OPTIONS (declared in po/Makevars).
   - The --intl option of the gettextize program (deprecated since 2010) is
     no longer available. Instead of including the intl sources in your package,
     we suggest making the libintl library an optional prerequisite of your
